samples/_failures_safe/1761462588_85c108_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4527862.c: In function ‘main’:
./samples/SAFE/__tmp_f4527862.c:186: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_f4527862.c:185:26: note: to match this ‘(’
  185 |             process_event(EVENT_START, NULL
      |                          ^
./samples/SAFE/__tmp_f4527862.c:185:13: error: expected declaration or statement at end of input
  185 |             process_event(EVENT_START, NULL
      |             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f4527862.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4527862.c:185:13: error: expected declaration or statement at end of input
